--- a/modules/dxp/apps/osb/osb-customer/osb-customer-support-theme/src/css/partials/_base.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-customer-support-theme/src/css/partials/_base.scss
@@ -171,7 +171,7 @@ textarea {
 	padding: 5px;
 	right: 25%;
 	text-align: center;
-	z-index: 101;
+	z-index: 430;
 }
 
 .portlet-msg-error {
