--- a/modules/dxp/apps/osb/osb-customer/osb-customer-support-theme/src/css/partials/_headings.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-customer-support-theme/src/css/partials/_headings.scss
@@ -31,7 +31,7 @@ h4 {
 	padding-bottom: 10px;
 	text-align: center;
 	width: 100%;
-	z-index: 2;
+	z-index: 20;
 
 	&.fixed {
 		margin-top: 0;
@@ -63,7 +63,7 @@ h4 {
 	}
 
 	&.other {
-		z-index: 2;
+		z-index: 20;
 	}
 
 	&.pinned, &.top {
@@ -77,7 +77,7 @@ h4 {
 
 	&.top {
 		padding-top: 70px;
-		z-index: 1;
+		z-index: 10;
 
 		&.notification-top {
 			top: 105px;
