--- a/modules/dxp/apps/osb/osb-customer/osb-customer-support-theme/src/css/partials/_notifications.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-customer-support-theme/src/css/partials/_notifications.scss
@@ -4,7 +4,7 @@
 	left: 60px;
 	position: fixed;
 	right: 0;
-	z-index: 2;
+	z-index: 430;
 
 	@include sm() {
 		display: block;
@@ -81,7 +81,7 @@
 	@include transform(translateX(-50%));
 
 	width: 750px;
-	z-index: 2;
+	z-index: 430;
 
 	@include sm() {
 		display: block;
